Incluye modificar y eliminar comentarios, correcciones varias